WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38267
REGRESSION: Autoscroll does not work in Mail messages
https://bugs.webkit.org/show_bug.cgi?id=38267
Summary
REGRESSION: Autoscroll does not work in Mail messages
Darin Adler
Reported
2010-04-28 09:57:01 PDT
REGRESSION: Autoscroll does not work in Mail messages
Attachments
Patch
(14.01 KB, patch)
2010-04-28 12:14 PDT
,
Darin Adler
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2010-04-28 10:03:00 PDT
Steps: 1) Open Mail 2) View a message that has a vertical scrollbar. 3) Drag a selection to the bottom of the message. Results: Does not scroll. Expected: Scrolls to reveal the selection.
Darin Adler
Comment 2
2010-04-28 12:14:33 PDT
Created
attachment 54605
[details]
Patch
Darin Adler
Comment 3
2010-04-28 13:57:20 PDT
Committed
r58428
: <
http://trac.webkit.org/changeset/58428
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug